--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
     <tr><td><a href="/workload.php/?value=110">Latency</a></td><td>set latency: sleep 110 ms.</td></tr>
     <tr><td><a href="/memwork.php/?value=110&memory=10">Memory workload</a></td><td>set workload: use 10 MB memory, and sleep 110 ms.</td></tr>
     <tr><td><a href="/cpuwork.php/?cpu=10">CPU workload</a></td><td>set workload: compute md5 for 10,000 numbers.</td></tr>
+    <tr><td><a href="/incorporate.php/?value=110&memory=10&cpu=10">Memory & CPU workload</a></td><td>set workload: use 10 MB memory, compute md5 for 10,000 numbers, and sleep 110 ms.</td></tr>
     <tr><td><a href="/server-status">server-status</a></td><td>get server status for human.</td></tr>
     <tr><td><a href="/server-status/?auto">server-status</a></td><td>get server status.</td></tr>
     </table>
